# MedicalAIClassificationSystem

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  LICENSE  MOCK_INTERVIEW_GUIDE.md  PORTFOLIO_SUMMARY.md  PROJECT_DESCRIPTION.md  PROJECT_STRUCTURE.md  README.md  STARTUP_INSTRUCTIONS.md  STRUCTURE.md  azure-pipelines.yml  check-deployment.sh  deploy-azure-fixed.sh  deploy-azure-production.ps1  deploy-azure-production.sh  deploy-azure-webapp.sh  deploy-azure.sh  deploy-container-apps.ps1  deploy-containerapp-final.sh  deploy-minimal.sh  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.py  setup.ps1  simple_api.py  simple_dashboard.py  start.bat  start.sh  start_services.bat  update-azure.ps1  update-azure.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd-pipeline.yml
docker/: Dockerfile.production  README.md  api.Dockerfile  dashboard.Dockerfile  docker_train_models.py  mlflow.Dockerfile  production.Dockerfile  streamlit-compat.Dockerfile  streamlit.Dockerfile
docs/: DEMO_GUIDE.md  DEPLOYMENT_GUIDE.md  README.md
docs/business/: NEXT_PROJECT_STRATEGY.md  STAKEHOLDER_PRESENTATION.md
docs/deployment/: COMPLETE_ORGANIZATION_REPORT.md  DEPLOYMENT_SUCCESS.md  DOCKER_COMPATIBILITY_SUCCESS.md  PHASE_4_COMPLETE.md  STAKEHOLDER_DEPLOYMENT_READY.md
docs/technical/: PROJECT_STRUCTURE.md  TECHNICAL_DOCUMENTATION.md
notebooks/: README.md  clean_model_performance_analysis.ipynb  clinical_decision_support_analysis.md  feature_engineering_analysis.ipynb  medical_classification_analysis.ipynb  model_performance_analysis.ipynb  project_structure_analysis.ipynb
scripts/: README.md  complete_dataset_processor.py  confidence_analysis.py  demo_pipeline.py  fetch_1500_samples.py  fetch_large_pubmed_dataset.py  fetch_pubmed_data.py  generate_sample_data.py  integrate_medical_data.py  simple_pubmed_fetch.py  validate_model_robustness.py
scripts/deployment/: deploy-production.ps1  production_assessment.py
scripts/testing/: production_assessment.py  test_edge_cases.py  test_pubmed.py
scripts/training/: enhance_edge_cases.py  intensive_edge_training.py  professional_model_training.py  train_medical_models.py  train_production_models.py
src/: __init__.py
src/api/: medical_api.py
src/config/: __init__.py
src/dashboard/: medical_dashboard.py
src/data/: __init__.py  ingestion.py  pipeline.py  preprocessing.py  storage.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_api.py  test_compatibility.py  test_enhanced_compatibility.py  test_medical_engine.py  test_models.py
